<resources>
    <string name="app_name">CloudOCR</string>
    <string name="handle_crop">剪裁</string>
    <string name="handle_ocr">文字识别</string>
    <string name="proofread">校对</string>
    <string name="handle_pdf">pdf转换</string>
    <string name="settings">设置</string>
    <string name="save">保存</string>
    <string name="hint_password">请输入8~16位密码</string>
    <string name="hint_account">请输入10位以内英文和数字组成的账号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="translate">翻译</string>
    <string name="account_not_login">用户未登录</string>
    <string name="auto_login">保存用户并自动登录</string>
    <string name="upload_history">上传未同步的历史信息</string>
    <string name="auto_cloud">自动同步历史信息</string>
    <string name="download_history">下载云端历史记录</string>
    <string name="select_language">选择语言</string>
    <string name="search">查找关键词</string>

    <string name="title_activity_photo_content">PhotoContentActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="handle_search">图片搜索</string>
    <string name="search_website">查看源网页</string>
    <string name="search_download">下载原图</string>

</resources>
