<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".PhotoHandle.PhotoHandleActivity">

    <!-- The primary full-screen textResultView. This can be replaced with whatever textResultView
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <ImageView
        android:id="@+id/handle_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="0dp"
        android:layout_margin="0dp"/>
    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/handle_back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_back_white"
                android:layout_margin="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/handle_crop_btn"
                    android:background="@drawable/ic_crop"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/handle_crop"
                    android:textSize="10dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/handle_pdf_btn"
                    android:background="@drawable/ic_ocr"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/handle_pdf"
                    android:textSize="10dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/handle_ocr_btn"
                    android:background="@drawable/ic_ocr"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/handle_ocr_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/handle_ocr"
                    android:textSize="10dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</FrameLayout>